cmake_minimum_required(VERSION 3.29)
project()

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(
    main.cpp
    manage.cpp
    news.cpp
    news.h
    user.cpp
        news.h
        news.h
        news.h
        news.h
        news.h
        news.h)
add_executable(new_target news.h
        news.h)
